package pt.hotel.animais.model.enums;

/**
 * Métodos de pagamento disponíveis no sistema.
 */
public enum MetodoPagamento {
    NUMERARIO,
    CARTAO_DEBITO,
    CARTAO_CREDITO
}