package pt.hotel.animais.model.enums;

public enum MomentoPagamento {
    CHECK_IN,
    CHECK_OUT,
    EXTRAS
}